# django-neat-html

./: LICENSE  README.md  justfile  pyproject.toml
django_neat_html/: __init__.py  utils.py
example/example/: settings.py  urls.py
example/neats/: forms.py
example/neats/pages/: base.py  counter.py  home.py
