[tool.poetry]
name = "django-neat-html"
version = "0.1.0"
description = ""
authors = ["Sam Dudley <dudley.co.uk@gmail.com>"]
readme = "README.md"
packages = [{include = "django_neat_html"}]

[tool.poetry.dependencies]
python = "^3.11"
neat-html = "^0.5.0"
django = ">=4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
